...
						localize(key: "login_email"),
						text: $login
					)
					.keyboardType(.emailAddress)
					.textContentType(.emailAddress)
					.accessibilityLabel(localize(key: "login_email"))
					.accessibilityIdentifier("requestPasswordReset.login")
					.font(.system(size: 24.0))
					.focused($focusedField, equals: .login)
					.autocorrectionDisabled()
				}
				.toolbar {
					ToolbarItem(placement: .keyboard) {
...
						}
					}
				}
				Button(action: requestPasswordReset) {
					Text(localize(key: "reset_password")).frame(maxWidth: .infinity)
				}
				.accessibilityIdentifier("requestPasswordReset.submit")
				.disabled(login.isEmpty || timerOn)
				.padding()
				.background(Color.accentColor)
				.foregroundColor(.white)
				.glassEffect()
				.cornerRadius(25)
...
